# CLIkipedia

./: .gitignore  Cargo.toml  README.md  TODO.md  test.html
src/: app.rs  handler.rs  lib.rs  main.rs  parser.rs  ui.rs  util.rs  wikipedia.rs
